--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
   },
   "dependencies": {
     "pinia": "^2.0.16",
-    "pug": "^3.0.2",
-    "stylus": "^0.59.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
   },
@@ -21,6 +19,9 @@
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^9.0.0",
     "prettier": "^2.5.1",
+    "pug": "^3.0.2",
+    "stylus": "^0.59.0",
+    "stylus-loader": "^7.0.0",
     "vite": "^3.0.1"
   }
 }
