--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "pinia": "^2.0.16",
+    "swiper": "^8.4.3",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
   },
