--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pug": "^3.0.2",
     "stylus": "^0.59.0",
     "stylus-loader": "^7.0.0",
-    "vite": "^3.0.1"
+    "vite": "^3.0.1",
+    "vite-plugin-svg-icons": "^2.0.1"
   }
 }
